src/styles/index.css
html {
  scroll-padding-top: 60px;
  scroll-behavior: smooth;
}

@media screen and (width < 641px){
  html {
    scroll-padding-top: 110px;
  }
}

@font-face {
  font-family: "Genshin";
  src: url("../fonts/genshin.woff") format("woff");
}

@font-face {
  font-family: "Minecraft";
  src: url("../fonts/minecraft.woff") format("woff");
}

@font-face {
  font-family: "Metropolis";
  src: url("../fonts/Metropolis-Light.woff") format("woff");
}

body {
  margin: 0;
  padding: 0;
  font-family: 'Metropolis', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 25px;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

* {
  margin: 0;
  padding: 0;
  text-align: center;
  align-items: center;
}

.App {
  background-color: black;
  color: white;
}

h1 {
  height: calc(100vh - 49px);
  position: absolute;
  width: 100%;
  color: white;          /* text color */
  display: flex;           /* centers the content vertically */
  flex-direction: column;
  justify-content: center; /* centers the content horizontally */
  background-size: cover;  /* stretches image to fill area */
  background-attachment: fixed;
  line-height: 40px;
}

.Home {
  height: calc(100vh - 49px);
  width: 100%;
}

/* Fade-in animation for home page text */
.fade-in {
  opacity: 0;
  animation: fade-in 1s ease-in-out forwards;
}

.fade-in-slow {
  opacity: 0;
  animation: fade-in 3s ease-in-out forwards;
}

.fade-out {
  opacity: 1;
  animation: fade-out 1s ease-in-out forwards;
}

@keyframes fade-in {
  from {
    opacity:0
  }
  to {
    opacity:1
  }
}

@keyframes fade-out {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

.transition-group {
  position: relative;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

/* Animation classes for fade-in and fade-out */
.fade-enter {
  opacity: 0;
  position: absolute;
}

.fade-enter-active {
  opacity: 1;
  transition: opacity 1000ms ease-in;
}

.fade-exit {
  opacity: 1;
  position: absolute;
}

.fade-exit-active {
  opacity: 0;
  transition: opacity 1000ms ease-out;
}

h3 {
  text-align: left;
  font-size: 30px;
}

h2 {
  text-align: left;
  font-size: 40px;
}

p {
  text-align: left;
}

.content {
  width: 100%;
}

.footer {
  padding-top: 50px;
}

.page {
  margin-left: 10%;
  margin-right: 10%;
  margin-top: 20px;
  padding-bottom: 50px;
}


/*----------------------ABOUT ME SECTION------------------------*/

.about-me-box h3 {
  text-align: left;
}

.about-me-box img {
  padding-bottom: 30px;
}

@media all and (900px <= width){
  .about-me-container {
    display: inline-flex;
    justify-content: flex-start;
    width: 100%;
  }
  
  .about-me-box {
    display: inline-flex;
    vertical-align: left;
    flex-direction: column;
  }

  .about-me-box img {
    padding-right: 40px;
  }
  .about-me-box h3 {
    text-align: left;
    width: 100%;
  }
} 


/*----------------------PROJECTS SECTION------------------------*/

.projects-container {
  text-align: center;
  display: inline;
  width: 100%;
  align-items: center;
  justify-content: center;
}

.project {
  display: inline-flex;
  vertical-align: middle;
  flex-direction: column;
  background-color: #afeeee;
  border-radius: 10px;
  padding: 10px;
  margin: 10px;
  height: 380px;
  /* justify-content: center;
  align-items: center;
  flex-direction: column; */
}

.project b, .project p {
  color: #303339;
  padding-bottom: 10px;
  width: 200px;
  text-align: center;
}

.project img {
  position: relative;
  top: 0;
  transition: top 0.2s ease-in-out;
  width: 200px;
  height: 200px;
  z-index: 2;
  padding: 20px
}

.project img:hover {
  top: -5px
}

.project img:active {
  top: 0
}

/*----------------------CONTACTS SECTION------------------------*/

.socials-container {
  text-align: center;
  display: inline;
  width: 100%;
  align-items: center;
  justify-content: center;
}

.social {
  display: inline-flex;
  vertical-align: middle;
  flex-direction: column;
  padding-bottom: 10px;
  /* justify-content: center;
  align-items: center;
  flex-direction: column; */
}

.social img {
  position: relative;
  top: 0;
  transition: top 0.2s ease-in-out;
  width: 100px;
  height: 100px;
  z-index: 2;
  padding: 20px;
  padding-top: 0px
}

.social img:hover {
  top: -3px
}

.social img:active {
  top: 0
}

iframe {
  width: 100%;
}

viewer {
  width: 100%
}

/* margin: auto centers the content, and max-width sets the max width. */
@media all and (1500px < width <= 1920px){


  .page {
    max-width: 1200px;
  }

  iframe {
    /* display: flex; */
    margin: 0 auto;
    width: 80%;
    height: 1130px;
  }
} 

@media all and (800px <= width <= 1500px){
  
  .page {
    max-width: 80%;
  }

  iframe {
    display: flex;
    margin: 0 auto;
    width: 100%;
    height: 1130px;
  }
}

@media all and (width < 800px) {
  
  .page {
    max-width: 80%;
  }

  iframe {
    display: flex;
    margin: 0 auto;
    width: 100%;
    height: 700px;
  }
}

@media all and (width <= 504px) {
  h1 {
    background-attachment: scroll;
  }

  iframe {
    display: flex;
    margin: 0 auto;
    width: 100%;
    height: 500px;
  }
}

/* Provides padding on the sides of the page. This is good for mobile display. */


.nav {
  list-style: none;
  margin:0;
  padding:0;
  text-align:center;
  background-color: #afeeee;
}

.navbar {
  position: -webkit-sticky; /* Safari */
  position: sticky;
  width: 100%;
  top: 0;
  z-index: 10;
}

.nav li {
  display: inline;
}

.nav a {
  display: inline-block;
  color: #424957;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

.nav a:hover {
  background-color: #c6e2ff;
} 

.Resume {
  width: 100%
}

/*----------------------CONTACT FORM ---------------------*/

.ContactMe {
  width: 100%;
  text-align: center;
  display: flex;
  flex-direction: column;
}

/* Style inputs with type="text", select elements and textareas */
input[type=text], input[type=email], select, textarea {
  width: 100%; /* Full width */
  padding: 12px; /* Some padding */ 
  border: 1px solid #ccc; /* Gray border */
  border-radius: 4px; /* Rounded borders */
  box-sizing: border-box; /* Make sure that padding and width stays in place */
  margin-top: 6px; /* Add a top margin */
  margin-bottom: 16px; /* Bottom margin */
  resize: none /* Allow the user to vertically resize the textarea (not horizontally) */
}

textarea {
  height: 200px;
  text-align: left
}

/* Style the submit button with a specific background color etc */
input[type=submit] {
  background-color: #afeeee;
  color: #424957;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

/* When moving the mouse over the submit button, add a darker green color */
input[type=submit]:hover {
  background-color: #c6e2ff;
}

/* Add a background color and some padding around the form */
.ContactForm {
  border-radius: 7px;
  background-color: #f2f2f2;
  padding: 20px;
}

.ContactForm label {
  color: #424957;
}

@media all and (width >= 680px) {
  .ContactForm {
    width: 500px
  }

  .ContactMe form {
    margin: 0 auto;
  }
}

.footer {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding-bottom: 50px;
}

.footer p {
  text-align: center;
  max-width: 800px;
}

